--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -21,3 +21,9 @@ description='''${mod_description}'''
     versionRange="${minecraft_version_range}"
     ordering="NONE"
     side="BOTH"
+[[dependencies.${mod_id}]]
+    modId="dimidiumcore"
+    mandatory=true
+    versionRange="${dimidiumcore_version_range}"
+    ordering="NONE"
+    side="BOTH"
