--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,9 @@ mod_version=0.0.1
 mod_group_id=net.dimidiummods.aboe
 mod_authors=Dimidium
 mod_description=A mod which adds a little bit of everything, hence the name. Heavily pre-alpha mod should not be used in survival.
+
+dimidiumcore_version=0.0.1
+dimidiumcore_version_range=0.0.1,1.0.0)
+jei_version=15.3.0.4
+mekanism_version=1.20.1-10.4.6.20
+top_version=1.20.0-9.0.0-1
