--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ parchment_minecraft_version=1.21
 parchment_mappings_version=2024.07.07
 minecraft_version=1.21
 minecraft_version_range=[1.21,1.21.1)
-neo_version=21.0.133-beta
-neo_version_range=[21.0.133-beta,)
+neo_version=21.0.146
+neo_version_range=[21.0.146,)
 loader_version_range=[4,)
 
 mod_id=aboe
@@ -20,8 +20,8 @@ mod_group_id=net.dimidium.aboe
 mod_authors=Dimidium
 mod_description=A mod which adds a little bit of everything, hence the name. Heavily pre-alpha mod should not be used in survival.
 
-dimidiumcore_version=0.0.2
+dimidiumcore_version=0.0.3
 dimidiumcore_version_range=0.0.2,1.0.0)
-jei_version=19.5.0.59
-mekanism_version=1.21-10.6.6.53
+jei_version=19.5.0.66
+mekanism_version=1.21-10.6.6.54
 top_version=1.21_neo-12.0.3-5
